--- a/references.bib
+++ b/references.bib
@@ -1891,3 +1891,14 @@ doi = {10.1201/9781420072884-c30}
   year={2007},
   publisher={Cambridge university press}
 }
+
+@Article{lenth2009rsm,
+  title = {Response-Surface Methods in {R}, Using {rsm}},
+  author = {Russell Lenth},
+  journal = {Journal of Statistical Software},
+  year = {2009},
+  volume = {32},
+  number = {7},
+  pages = {1--17},
+  doi = {10.18637/jss.v032.i07},
+}
